plugins {
    alias(libs.plugins.android.application)
    id 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
}

// read local properties
Properties properties = new Properties()
if (project.rootProject.file('local.properties').canRead()) {
    properties.load(project.rootProject.file('local.properties').newDataInputStream())
}

android {
    namespace 'com.example.travelplanning'
    compileSdk 36

    signingConfigs {
        debug {
            // path to debug keystore (for social)
            storeFile file('keystore/debug.keystore')
            storePassword 'android'
            keyAlias 'androiddebugkey'
            keyPassword 'android'
        }
    }

    defaultConfig {
        applicationId "com.example.travelplanning"
        minSdk 29
        targetSdk 36
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        // get values in local
        buildConfigField "String", "GOOGLE_WEB_CLIENT_ID", "\"${properties.getProperty('GOOGLE_WEB_CLIENT_ID', '')}\""
        manifestPlaceholders = [
                FACEBOOK_APP_ID: properties.getProperty('FACEBOOK_APP_ID', ''),
                FB_LOGIN_PROTOCOL_SCHEME: properties.getProperty('FB_LOGIN_PROTOCOL_SCHEME', ''),
                FACEBOOK_CLIENT_TOKEN: properties.getProperty('FACEBOOK_CLIENT_TOKEN', '')
        ]
    }

    buildFeatures {
        buildConfig true
        viewBinding true
    }

    buildTypes {

        debug {
            buildConfigField "String", "BASE_URL", "\"${properties.getProperty('BASE_URL', 'http://10.0.0.2:5000/')}\""
            signingConfig signingConfigs.debug
        }
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    sourceSets {
        main {
            java {
                srcDirs 'src/main/java', 'src/main/java/2', 'src/main/java/api', 'src/main/java/model'
            }
        }
    }
}

dependencies {
    implementation libs.appcompat
    implementation libs.activity
    implementation libs.constraintlayout
    // lombok
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    // retrofit
    implementation libs.retrofit
    // gson
    implementation libs.converter.gson
    // okhttp
    implementation libs.okhttp
    implementation libs.logging.interceptor
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core

    // google and facebook
    implementation libs.play.services.auth.v1501
    implementation libs.facebook.android.sdk

    //ui
    implementation(libs.core.splashscreen)
    implementation libs.navigation.fragment
    implementation libs.navigation.ui
    implementation libs.lifecycle.viewmodel
    implementation libs.osmdroid.android
    implementation libs.lifecycle.livedata
    implementation libs.navigation.fragment
    implementation libs.navigation.ui
    implementation libs.lifecycle.viewmodel
    implementation libs.jackson.databind
    implementation libs.material
    implementation libs.glide
    implementation libs.preference

    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'

    // GPS
    implementation 'com.google.android.gms:play-services-location:21.0.1'

    // markdown
    implementation "io.noties.markwon:core:4.6.2"

    // Room components
    implementation "androidx.room:room-runtime:2.6.1"
    annotationProcessor "androidx.room:room-compiler:2.6.1"

    // Gson for TypeConverters
    implementation 'com.google.code.gson:gson:2.10.1'
}